# AashaAI

./: .gitignore  .todo  LICENSE  README.md  package.json  pnpm-lock.yaml  vercel.json
.github/workflows/: esp-server-sync.yaml  sync.yaml  website-server-sync.yaml
app/: globals.css  layout.tsx  page.tsx
app/insights/: page.tsx
app/profile/: page.tsx
components/: 3dobj.tsx  CardNav.tsx  content.tsx  faqs.tsx  features.tsx  footer.tsx  header.tsx  hero-section.tsx  job-details-modal.tsx  logo.tsx  navbar.tsx  profile-section.tsx  sidebar.tsx  skills-chart.tsx  team.tsx
components/home/: features.tsx
esp-server/: Dockerfile  README.md  main.py  pyproject.toml  watcher.py  ws-server.py
esp-sketch/: esp-sketch.ino
hardware/firmware/: .gitignore  CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.defaults.esp32s3
hardware/server/: .dockerignore  .gitignore  Dockerfile  main.py  pyproject.toml
public/: scene.gltf
server/: README.md
website/: package.json  pnpm-lock.yaml
website/app/: globals.css  layout.tsx  page.tsx
website/backend/: .dockerignore  .gitignore  Dockerfile  README.md  database.py  main.py  models.py  requirements.txt  seed.py
website/components/: CardNav.tsx  application-card.tsx  application-trend-chart.tsx  bg.tsx  filter-dialog.tsx  footer.tsx  insights-chart.tsx  job-card.tsx  kanban-board.tsx  logo.tsx  navbar.tsx  sidebar.tsx  team.tsx
website/frontend/: .dockerignore  .gitignore  Dockerfile  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.js
website/lib/: data.ts
(+30 files in other folders)
